--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michał Uliszak - Curriculum Vitae</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <style>
+        .foto
+        {
+            max-width: 288px;
+        }
+    </style>
 </head>
 <body>
-   
+   <div class="container-fluid border-bottom">
+    <div class=" d-flex p-5 justify-content-center ">
+        <div class="fs-1 mx-5">
+            <h1 class="display-2 mt-5">Michał Uliszak</h1>
+            <p class="lead">A Self-starter wiling to enter IT industry.</p>
+        </div>
+        <img src="img/uli.jpg" alt="Michał Uliszak" class="foto mx-5 img-fluid img-thumbnail rounded">
+    </div>
+   </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
