Added Profile section in index.html, also Footer with copyright

--- a/index.html
+++ b/index.html
@@ -14,17 +14,44 @@
     </style>
 </head>
 <body>
-   <div class="container-fluid border-bottom">
+    <!--Jumbotron */ --> 
+   <div class="container-fluid border-bottom mb-1">
     <div class=" d-flex p-5 justify-content-center ">
-        <div class="fs-1 mx-5">
-            <h1 class="display-2 mt-5">Michał Uliszak</h1>
+        <div class=" mx-5">
+            <h1 class="display-2 mt-5 fw-semibold">Michał Uliszak</h1>
             <p class="lead">A Self-starter wiling to enter IT industry.</p>
         </div>
         <img src="img/uli.jpg" alt="Michał Uliszak" class="foto mx-5 img-fluid img-thumbnail rounded">
     </div>
-   </div>
-    
+    </div>
 
+    <!-- Profile -->
+
+    <div class="p-5 bg-light rounded">
+        <div class="container-fluid py-1">
+            <h2 class="diplay-5">
+                Profile:
+            </h2>
+            <p class="lead">
+                The work I performed required communication skills, great flexibility and quick problem solving.
+                Thanks to them, I am not afraid of new challenges and developed my interpersonal skills.
+                Recently I found great pleasure in coding. I started to learn from youtube videos and decided to buy few Udemy courses.
+                I chose <strong>C#</strong>, because it is used in game development, but now I'm making my first WebAPI using <strong>Entity Framework</strong> and <strong>SQL database</strong>.
+            </p>
+            <p class="lead">
+                I'm focused on becoming junior software developer. To get better at it, I'm attending right now on course led by infoShare Academy. 
+                I don't have real experience yet, but I'm using best practices like <strong>dependency injection</strong>, <strong>SOLID</strong> or <strong>DRY</strong>. 
+                I'm ready to learn a lot more.
+            </p>
+        </div>
+
+    </div>
+
+
+    
+    <footer class="pt-3 mt-4 text-muted border-top">
+        <p class="ms-1"> © 2022 </p>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </body>
 </html>
