--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!--Jumbotron */ --> 
    <div class="container-fluid border-bottom mb-1">
-    <div class=" d-flex p-5 justify-content-center ">
+    <div class=" d-flex p-5 justify-content-center bg-success text-white">
         <div class=" mx-5">
             <h1 class="display-2 mt-5 fw-semibold">Michał Uliszak</h1>
             <p class="lead">A Self-starter wiling to enter IT industry.</p>
@@ -27,7 +27,7 @@
 
     <!-- Profile -->
 
-    <div class="p-5 bg-light rounded">
+    <div class="p-5 bg-light rounded-3">
         <div class="container-fluid py-1">
             <h2 class="diplay-5">
                 Profile:
@@ -46,7 +46,51 @@
         </div>
 
     </div>
-
+    <!-- Skills -->
+    <div class="row align-items-md-stretch">
+        <div class="col-md-6 px-md-0">
+            <div class=" h-100 p-5 bg-success text-emphasis-light mx-0 box-margin-0 text-white">
+                <h2 class="diplay-5">
+                    Skills:
+                </h2>
+                <p class="lead">
+                    <ul>
+                        <li>C#</li>
+                        <li>.NET</li>
+                        <li>Git</li>
+                        <li>Entity Framework</li>
+                        <li>SQL</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        <li>Driving License cat. B</li>
+                        <li>MS Office</li>
+                    </ul>
+                </p>
+                <h2 class="diplay-5">
+                    Language:
+                </h2>
+                <p class="lead">
+                    <ul>
+                        <li>Polish - Native speaker</li>
+                        <li>English - Intermediate</li>
+                    </ul>
+                </p>
+            </div>
+        </div>
+        <div class="col-md-6 px-md-0">
+            <div class="h-100 p-5 bg-body-secondary text-emphasis-light mx-0">
+                <h2 class="diplay-5">
+                    Experience:
+                </h2>
+                <p class="lead">
+                    The work I performed required communication skills, great flexibility and quick problem solving.
+                    Thanks to them, I am not afraid of new challenges and developed my interpersonal skills.
+                    Recently I found great pleasure in coding. I started to learn from youtube videos and decided to buy few Udemy courses.
+                    I chose <strong>C#</strong>, because it is used in game development, but now I'm making my first WebAPI using <strong>Entity Framework</strong> and <strong>SQL database</strong>.
+                </p>
+            </div>
+        </div>
 
     <!-- Footer -->
     <footer class="pt-3 mt-4 text-muted border-top">
