--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.75">
     <title>Michał Uliszak - Curriculum Vitae</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
@@ -11,13 +11,16 @@
         {
             max-width: 288px;
         }
+        body{
+            min-width: 590px;
+        }
     </style>
 </head>
 <body>
     <!--Jumbotron */ --> 
-   <div class="container-fluid border-bottom mb-1">
-    <div class=" d-flex p-5 justify-content-center bg-success text-white">
-        <div class=" mx-5">
+   <div class="container-fluid border-bottom mb-1 px-sm-0">
+    <div class=" d-flex p-5 justify-content-center bg-success text-white ">
+        <div class="mx-5">
             <h1 class="display-2 mt-5 fw-semibold">Michał Uliszak</h1>
             <p class="lead">A Self-starter wiling to enter IT industry.</p>
         </div>
@@ -47,7 +50,7 @@
 
     </div>
     <!-- Skills -->
-    <div class="row align-items-md-stretch">
+    <div class="row align-items-sm-stretch">
         <div class="col-md-6 px-md-0">
             <div class=" h-100 p-5 bg-success text-emphasis-light mx-0 box-margin-0 text-white">
                 <h2 class="diplay-5">
@@ -78,7 +81,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-md-6 px-md-0">
+        <div class="col-md-6 px-sm-0">
             <div class="h-100 p-5 bg-body-secondary text-emphasis-light mx-0">
                 <h2 class="diplay-5">
                     Experience:
