Skills section updated to two colums with fixed margins

--- a/index.html
+++ b/index.html
@@ -56,29 +56,39 @@
                 <h2 class="diplay-5">
                     Skills:
                 </h2>
-                <p class="lead">
-                    <ul>
-                        <li>C#</li>
-                        <li>.NET</li>
-                        <li>Git</li>
-                        <li>Entity Framework</li>
-                        <li>SQL</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Bootstrap</li>
-                        <li>Driving License cat. B</li>
-                        <li>MS Office</li>
-                    </ul>
-                </p>
+                <div class="container justify-content-center">
+                    <div class="row">
+                    <div class="lead col-md-6">
+                        <ul class="pb-0 mb-0">
+                            <li>C#</li>
+                            <li>.NET</li>
+                            <li>Git</li>
+                            <li>Entity Framework</li>
+                            <li>SQL</li>
+                            <li>HTML</li>
+                        </ul>
+                    </div>
+                    <div class="lead col-md-6">
+                        <ul>
+                            <li>CSS</li>
+                            <li>Bootstrap</li>
+                            <li>Communication</li>
+                            <li>Teamwork</li>
+                            <li>Driving License cat. B</li>
+                            <li>MS Office</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
                 <h2 class="diplay-5">
-                    Language:
+                    Languages:
                 </h2>
-                <p class="lead">
+                <div class="container lead">
                     <ul>
                         <li>Polish - Native speaker</li>
                         <li>English - Intermediate</li>
                     </ul>
-                </p>
+                </div>
             </div>
         </div>
         <div class="col-md-6 px-sm-0">
