Experience section filled up

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                         <li>English - Intermediate</li>
                     </ul>
                 </div>
+                
             </div>
         </div>
         <div class="col-md-6 px-sm-0">
@@ -96,12 +97,22 @@
                 <h2 class="diplay-5">
                     Experience:
                 </h2>
-                <p class="lead">
-                    The work I performed required communication skills, great flexibility and quick problem solving.
-                    Thanks to them, I am not afraid of new challenges and developed my interpersonal skills.
-                    Recently I found great pleasure in coding. I started to learn from youtube videos and decided to buy few Udemy courses.
-                    I chose <strong>C#</strong>, because it is used in game development, but now I'm making my first WebAPI using <strong>Entity Framework</strong> and <strong>SQL database</strong>.
-                </p>
+                <div class="lead container">
+                    <p>
+                        <strong>PGNiG Sp. z o.o. | 2013 - 2015, 2017 - now</strong><br>
+                        <i>Customer Service Consultant</i>
+                    </p>
+                    <p>
+                        Comprehensive service for individual and non-consumer customers, concluding contracts, handling settlements, archiving documents, selling products.
+                    </p>
+                    <p>
+                        <strong>Intersport Polska | 2015-2017</strong><br>
+                        <i>Salesman/Sports equipment service technician</i>
+                    </p>
+                    <p>
+                        Active sales in the store, service and repair of sports equipment provided by customers(not only purchased in the store), warranty services, stock-taking, minor repairs int the store, storage works.
+                    </p>
+                </div>
             </div>
         </div>
 
