--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Profile -->
 
-    <div class="p-5 bg-light rounded-3">
+    <div class="p-5 bg-light">
         <div class="container-fluid py-1">
             <h2 class="diplay-5">
                 Profile:
@@ -44,7 +44,9 @@
             <p class="lead">
                 I'm focused on becoming junior software developer. To get better at it, I'm attending right now on course led by infoShare Academy. 
                 I don't have real experience yet, but I'm using best practices like <strong>dependency injection</strong>, <strong>SOLID</strong> or <strong>DRY</strong>. 
-                I'm ready to learn a lot more.
+            </p>
+            <p class="lead">
+                <strong>I'm ready to learn a lot more.</strong>
             </p>
         </div>
 
@@ -58,7 +60,7 @@
                 </h2>
                 <div class="container justify-content-center">
                     <div class="row">
-                    <div class="lead col-md-6">
+                    <div class="lead col-sm-6">
                         <ul class="pb-0 mb-0">
                             <li>C#</li>
                             <li>.NET</li>
@@ -68,7 +70,7 @@
                             <li>HTML</li>
                         </ul>
                     </div>
-                    <div class="lead col-md-6">
+                    <div class="lead col-sm-6">
                         <ul>
                             <li>CSS</li>
                             <li>Bootstrap</li>
@@ -89,10 +91,18 @@
                         <li>English - Intermediate</li>
                     </ul>
                 </div>
+                <h2 class="diplay-5">
+                    Hobby:
+                </h2>
+                <div class="container lead">
+                    <ul>
+                        <li><a class="text-white" href="https://www.youtube.com/watch?v=szvv_bhuxlE" target="_blank">Hanz Bonanza</a> - my band</li>
+                    </ul>
+                </div>
                 
             </div>
         </div>
-        <div class="col-md-6 px-sm-0">
+        <div class="col-md-6 px-md-0">
             <div class="h-100 p-5 bg-body-secondary text-emphasis-light mx-0">
                 <h2 class="diplay-5">
                     Experience:
@@ -103,7 +113,7 @@
                         <i>Customer Service Consultant</i>
                     </p>
                     <p>
-                        Comprehensive service for individual and non-consumer customers, concluding contracts, handling settlements, archiving documents, selling products.
+                        Comprehensive service for individual and non-consumer customers, concluding contracts, handling settlements, archiving documents, selling additional products.
                     </p>
                     <p>
                         <strong>Intersport Polska | 2015-2017</strong><br>
@@ -115,6 +125,31 @@
                 </div>
             </div>
         </div>
+
+    <!-- Education ;( )-->
+    <div class="p-5 bg-light">
+        <div class="container-fluid py-1">
+            <h2 class="diplay-5">
+                Education:
+            </h2>
+            <div class="lead container">
+                <p>
+                    <strong>Highschool Diploma | 2007 - 2009</strong><br>
+                    <i>I Liceum Ogólnokształcące w Gnieźnie</i>
+                </p>
+                <p>
+                    Class profile: Computer science and mathematics.
+                </p>
+                <p>
+                    <strong>Course: Junior .NET/C# Developer | February 2023 - July 2023</strong><br>
+                    <i>infoShare Academy</i>
+                </p>
+                <p>
+                    Intensive and complete course preparing for work as a junior .Net/C# Developer
+                </p>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="pt-3 mt-4 text-muted border-top">
