education section modified

--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
         </div>
 
     <!-- Education ;( )-->
-    <div class="p-5 bg-light">
-        <div class="container-fluid py-1">
+    <div class="row align-items-sm-stretch">
+        <div class="col-md-6 px-md-0">
+            <div class=" h-100 p-5 mx-0 box-margin-0 text-emphasis-light">
             <h2 class="diplay-5">
                 Education:
             </h2>
@@ -141,12 +142,13 @@
                     Class profile: Computer science and mathematics.
                 </p>
                 <p>
-                    <strong>Course: Junior .NET/C# Developer | February 2023 - July 2023</strong><br>
+                    <strong>Course: Junior .NET/C# Developer | 02/2023 - 07/2023</strong><br>
                     <i>infoShare Academy</i>
                 </p>
                 <p>
                     Intensive and complete course preparing for work as a junior .Net/C# Developer
                 </p>
+            </div>
             </div>
         </div>
     </div>
