Github section added, Fixing rows

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 
             </div>
         </div>
+        <!-- Experience -->
         <div class="col-md-6 px-md-0">
             <div class="h-100 p-5 bg-body-secondary text-emphasis-light mx-0">
                 <h2 class="diplay-5">
@@ -125,7 +126,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
     <!-- Education ;( )-->
     <div class="row align-items-sm-stretch">
         <div class="col-md-6 px-md-0">
@@ -151,6 +152,13 @@
             </div>
             </div>
         </div>
+        <!-- GitHub -->
+        <div class="col-md-6 px-md-0">
+            <div class=" h-100 p-5 bg-success text-emphasis-light mx-0 text-white">
+                <h2 class="diplay-5">
+                    GitHub:
+                </h2>
+            </div>
     </div>
 
     <!-- Footer -->
